k8s/adservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: harishnshetty/adservice:latest
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: 100m
            memory: 96Mi
          limits: 
            cpu: 300m
            memory: 300Mi
        readinessProbe:
          tcpSocket:
            port: 9555
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 9555
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
